# Thi-hip-hopper

./: README.md
my_interfaces/: CMakeLists.txt  package.xml
my_interfaces/srv/: RectangleDimensions.srv
pubsub6/: package.xml  setup.cfg  setup.py
pubsub6/pubsub6/: filtered_subscriber.py  multi_value_publisher.py
serv_sub/: package.xml  setup.cfg  setup.py
serv_sub/serv_sub/: readme.txt  service_server.py  subscriber.py
serv_sub_interfaces/: CMakeLists.txt  package.xml
server_client/: package.xml  setup.cfg  setup.py
server_client/server_client/: rectangle_client.py  rectangle_server.py
simon_interfaces/: CMakeLists.txt  package.xml
simon_nodes/: package.xml  setup.cfg  setup.py
simon_nodes/simon_nodes/: relay_node.py  server_node.py
sub_folder_pkgs/custom_interfaces2/: CMakeLists.txt  package.xml
sub_folder_pkgs/custom_interfaces2/action/: Patrol.action
sub_folder_pkgs/patrol_action_server/: package.xml  setup.py
sub_folder_pkgs/patrol_action_server/patrol_action_server/: action_patrol_client.py  patrol_action_server.py
